--- a/templates/index.tmpl
+++ b/templates/index.tmpl
@@ -2,7 +2,8 @@
 {{template "head" .}}
 <body id='page-index'>
 	<div id='hd'>
-		{{ template "brand"}}
+	
+		{{ template "brand" .}}
 
 		<div id='nav'>
 			<div class='wrap'>
@@ -330,18 +331,12 @@
 	  	
 	  		<div class='hd clearfix'>
 	  			<h1>电商团购 <i class="icon-thumb-small">&nbsp;</i></h1>
-	  			<ul>
-	  				<li><a href='/newhouse/list.html'>全部楼盘</a></li>
-					{{ range $index, $usage := .Tops.Usages }}
-						<li>&nbsp;| <nobr><a href='{{queryN "/newhouse/list.html" "usage" .Value}}'>{{.Name}}</a></nobr></li>
-					{{ end }}
-	  			</ul>
 	  			<div class='more'><a href='/newhouse/list.html'>更多</a></div>
 	  		</div>
 	  		
 	  		<div class='bd'>
 	  			{{range $i, $v := .GroupBuys}}
-	  			<div class='groupbuy {{if eq (mod $i 3) 2}}groupbuy-last{{end}}'>
+	  			<div class='groupbuy {{if eq (mod $i 3) 2}}groupbuy-last{{end}} clickable'>
 	  			
 	  				<div>
 	  				{{if and .Cover .Cover.Palm }}
@@ -350,7 +345,7 @@
 	  				</div>
 	  				
 	  				<dl class='clearfix'>
-	  					<dt><h2>{{.Name}}</h2></dt>
+	  					<dt><h2><a href='/newhouse/o{{.Id}}.html'>{{.Name}}</a></h2></dt>
 	  					<dd><a class='btn' href='#'>我要团购</a></dd>
 	  				</dl>
 	  				
@@ -525,15 +520,10 @@
 	  			</div>
 	  			<div class='bd f13'>
 	  				<ul>
-	  					<li class='pic'>
-	  					
-	  						{{ range slice .Deliveries 0 1}}
-		  						<a href='/newhouse/o{{.Id}}.html'><img width=270 height=151 src='{{.Cover.Palm.Path}}' /></a>
-	  						{{end}}
-	  					</li>
 	  					<li>
 	  						{{ range $i, $o := .Deliveries }}
 		  						<dl data-cover="{{.Cover.Palm.Path}}" class='{{if eq $i 0}}active{{end}} clearfix clickable hoverable'>
+		  							<dt><a href='/newhouse/o{{.Id}}.html'><img width=270 height=151 src='{{.Cover.Palm.Path}}' /></a></dt>
 		  							<dd class='price'>
 		  							{{.Price}} 元/㎡
 		  							{{if equals .PriceType -1}}
@@ -606,14 +596,10 @@
 	  			</div>
 	  			<div class='bd f13'>
 	  				<ul>
-	  					<li class='pic'>
-	  						{{ range slice .Opens 0 1}}
-		  						<a href='/newhouse/o{{.Id}}.html'><img width=270 height=151 src='{{.Cover.Palm.Path}}' /></a>
-	  						{{end}}
-	  					</li>
 	  					<li>
 	  						{{ range $i, $o := .Opens }}
 		  						<dl data-cover="{{.Cover.Palm.Path}}" class='{{if eq $i 0}}active{{end}} clearfix clickable hoverable'>
+		  							<dt><a href='/newhouse/o{{.Id}}.html'><img width=270 height=151 src='{{.Cover.Palm.Path}}' /></a></dt>
 		  							<dd>{{if not (equals .OpenDate "")}}{{.OpenDate}}{{else}}{{.SOpen}}{{end}}</dd>
 		  							<dt><i class='icon-dot'></i> <a href='/newhouse/o{{.Id}}.html'>{{.Name}}</a></dt>
 		  						</dl>
@@ -652,16 +638,13 @@
 					$(".datas").find(".dataset").hide();
 					$(".datas").find($(that).attr("data-for")).fadeIn();
 				}
-			}, 200)
-		}, function(){})
+			}, 200);
+		}, function(){});
 		
-		$(".deliveries .bd ul li dl").hover(function(){
-			$(".deliveries .bd ul li.pic img").attr("src", $(this).attr("data-cover"))
-		})
-		
-		$(".opens .bd ul li dl").hover(function(){
-			$(".opens .bd ul li.pic img").attr("src", $(this).attr("data-cover"))
-		})
+		$(".deliveries .bd ul li dl, .opens .bd ul li dl").hover(function(){
+			$(this).parent().find("dl.active").removeClass("active");
+			$(this).addClass("active");
+		});
 	})
 	</script>
 	
