--- a/templates/lib.tmpl
+++ b/templates/lib.tmpl
@@ -1,7 +1,9 @@
+
 {{define "head"}}
 	<head>
 		<title>{{if .HTMLTitle}}{{.HTMLTitle}} - {{end}}嘉兴房产团购网</title>
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
+		<link rel="stylesheet" type="text/css" href="/lib.css?{{.CONTEXT.UPTIME}}" />
 		<link rel="stylesheet" type="text/css" href="/css.css?{{.CONTEXT.UPTIME}}" />
 	</head>
 {{end}}
@@ -14,7 +16,7 @@
 				<li class='hoverable clickable {{if .HTMLComponent}}{{if eq .HTMLComponent "newhouse"}}active{{end}}{{end}}'><a href='/newhouse/'>新房</a></li>
 				<li class='hoverable clickable'><a href='#'>二手房</a></li>
 				<li class='hoverable clickable {{if .HTMLComponent}}{{if eq .HTMLComponent "news"}}active{{end}}{{end}}'><a href='/news/'>资讯</a></li>
-				<li class='hoverable clickable'><a href='#'>装修</a></li>
+				<li class='hoverable clickable'><a href='http://jx.zxdyw.com/' target="_blank">装修</a></li>
 				<li class='hoverable clickable {{if .HTMLComponent}}{{if eq .HTMLComponent "groupbuy"}}active{{end}}{{end}}'><a href='/groupbuy/'>团购<i class='icon-thumb-top'></i></a></li>
 			</ul>
 			<div class='more'>
@@ -47,7 +49,7 @@
 				&nbsp;&nbsp;&nbsp;&nbsp;<a href='/newhouse/'>新房</a>
 				&nbsp;&nbsp;&nbsp;&nbsp;<a href='#'>二手房</a>
 				&nbsp;&nbsp;&nbsp;&nbsp;<a href='/news/'>资讯</a>
-				&nbsp;&nbsp;&nbsp;&nbsp;<a href='#'>装修</a>
+				&nbsp;&nbsp;&nbsp;&nbsp;<a href='http://jx.zxdyw.com/' target="_blank">装修</a>
 				&nbsp;&nbsp;&nbsp;&nbsp;<a href='/groupbuy/'>团购</a>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -107,6 +109,25 @@
 </div>
 {{end}}
 
+{{define "newhouse-hd" }}
+	{{template "newhouse-brand" .}}
+	<div id='nav'>
+		<div class='wrap'>
+			<ul class='menu'>
+				{{with .Newhouse}}
+					<li class='hoverable clickable {{if eq $.NewhouseComponent "index"}}active{{end}}'><a href='/newhouse/o{{.Id}}.html'>楼盘首页</a></li>
+					<li class='hoverable clickable {{if eq $.NewhouseComponent "introduction"}}active{{end}}'><a href='/newhouse/i{{.Id}}.html'>简介</a></li>
+					<li class='hoverable clickable {{if eq $.NewhouseComponent "news"}}active{{end}}'><a href='/newhouse/n{{.Id}}.html'>资讯</a></li>
+					<li class='hoverable clickable {{if eq $.NewhouseComponent "layout"}}active{{end}}'><a href='/newhouse/l{{.Id}}.html'>户型</a></li>
+					<li class='hoverable clickable {{if eq $.NewhouseComponent "enviroment"}}active{{end}}'><a href='/newhouse/e{{.Id}}.html'>配套</a></li>
+					<li class='hoverable clickable {{if eq $.NewhouseComponent "picture"}}active{{end}}'><a href='/newhouse/p{{.Id}}.html'>图库</a></li>
+					<li class='hoverable clickable {{if eq $.NewhouseComponent "review"}}active{{end}}'><a href='/newhouse/r{{.Id}}.html'>点评</a></li>
+				{{end}}
+			</ul>
+		</div>
+	</div>
+{{end}}
+
 {{define "newhouse-brand" }}
 <div id='brand' class='clearfix'>
 		
@@ -160,23 +181,45 @@
 {{define "newhouse-search"}}
 <div class='search'>
 	<div class='form clearfix'>
-		<form action='/estate/list.html'>
-			<input class='submit' type='submit' value='搜索' />
-			<input class='text' name='q' type='text' placeholder='输入楼盘名称、地址或开发商等' /> 
+		<form action='/newhouse/list.html'>
+			<dl>
+				<dt>
+					<select placeholder="所在区域" class='area-search select2' name='area'>
+						<option></option>
+						{{range $.CONTEXT.KVs.Area.Nodes}}
+							<option value="{{.Value}}">{{.Name}}</option>
+						{{end}}
+					</select>
+					<select placeholder="目标价位" class='price-search select2' name='price'>
+						<option></option>
+						{{range $.CONTEXT.KVs.Price.Nodes}}
+							<option value="{{.Value}}">{{.Name}}</option>
+						{{end}}
+					</select>
+					<select placeholder="物业类型" class='area-search select2' name='usage'>
+						<option></option>
+						{{range $.CONTEXT.KVs.Usage.Nodes}}
+							<option value="{{.Value}}">{{.Name}}</option>
+						{{end}}
+					</select>
+					<input class='text' name='q' type='text' placeholder='楼盘名称、地址或开发商' />
+				</dt>
+				<dd><input class='submit' type='submit' value='搜索' /></dd>
+			</dl>
 		</form>
 	</div>
 	<div class='quick-search clearfix'>
 		<ul>
-			<li><a href='#'>嘉兴万达</a></li>
-			<li><a href='#'>中港城</a></li>
-			<li><a href='#'>旭辉广场</a></li>
-			<li><a href='#'>南湖区</a></li>
-			<li><a href='#'>江南摩尔</a></li>
-			<li><a href='#'>嘉兴</a></li>
-			<li><a href='#'>桐乡</a></li>
-			<li><a href='#'>嘉善</a></li>
-			<li><a href='#'>海宁</a></li>
-			<li><a href='#'>平湖</a></li>
+			<li><a href='/newhouse/list.html?q={{"嘉兴万达"}}'>嘉兴万达</a></li>
+			<li><a href='/newhouse/list.html?q={{"中港城"}}'>中港城</a></li>
+			<li><a href='/newhouse/list.html?q={{"旭辉广场"}}'>旭辉广场</a></li>
+			<li><a href='/newhouse/list.html?q={{"南湖区"}}'>南湖区</a></li>
+			<li><a href='/newhouse/list.html?q={{"江南摩尔"}}'>江南摩尔</a></li>
+			<li><a href='/newhouse/list.html?q={{"嘉兴"}}'>嘉兴</a></li>
+			<li><a href='/newhouse/list.html?q={{"桐乡"}}'>桐乡</a></li>
+			<li><a href='/newhouse/list.html?q={{"嘉善"}}'>嘉善</a></li>
+			<li><a href='/newhouse/list.html?q={{"海宁"}}'>海宁</a></li>
+			<li><a href='/newhouse/list.html?q={{"平湖"}}'>平湖</a></li>
 		</ul>
 	</div>
 </div>
@@ -311,14 +354,12 @@
 	</div>
 	<div class='bd f13'>
 		<ul>
-			<li class='pic'>
-				{{ range slice .NewhouseFocus 0 1}}
- 					<a href='/newhouse/o{{.Id}}.html'><img width=270 height=151 src='{{.Cover.Palm.Path}}' /></a>
-				{{end}}
-			</li>
 			<li class='rankings'>
 				{{range $i,$v := .NewhouseFocus}}
-					<dl data-cover="{{.Cover.Palm.Path}}" class='{{if eq $i 0}}active{{end}} hoverable clickable clearfix'>
+					<dl data-cover="{{.Cover.Palm.Path}}" class='{{if eq $i 0}}active{{end}} clickable clearfix'>
+						<dt>
+							<a href='/newhouse/o{{.Id}}.html'><img width=320 height=180 src='{{.Cover.Palm.Path}}' /></a>
+						</dt>
 						<dd class='price'>{{.Price}} 元/㎡ 
 							{{if equals .PriceType 1 }}
 								<i class='icon-price-start'></i>
@@ -349,14 +390,10 @@
 	</div>
 	<div class='bd f13'>
 		<ul>
-			<li class='pic'>
-				{{ range slice .NewhouseRecommends 0 1}}
- 					<a href='/newhouse/o{{.Id}}.html'><img width=270 height=151 src='{{.Cover.Palm.Path}}' /></a>
-				{{end}}
-			</li>
 			<li class='rankings'>
 				{{range $i, $v := .NewhouseRecommends}}
-					<dl data-cover="{{.Cover.Palm.Path}}" class='{{if eq $i 0}}active{{end}} hoverable clickable clearfix'>
+					<dl data-cover="{{.Cover.Palm.Path}}" class='{{if eq $i 0}}active{{end}} clickable clearfix'>
+						<dt><a href='/newhouse/o{{.Id}}.html'><img width=320 height=180 src='{{.Cover.Palm.Path}}' /></a></dt>
 						<dd class='price'>{{.Price}} 元/㎡ 
 							{{if equals .PriceType 1 }}
 								<i class='icon-price-start'></i>
@@ -387,14 +424,10 @@
 		</div>
 		<div class='bd f13'>
 			<ul>
-				<li class='pic'>
-					{{ range slice .NewhouseDeliveries 0 1}}
-	 					<a href='/newhouse/o{{.Id}}.html'><img width=270 height=151 src='{{.Cover.Palm.Path}}' /></a>
-					{{end}}
-				</li>
 				<li>
 					{{ range $i, $o := .NewhouseDeliveries }}
-					<dl data-cover="{{.Cover.Palm.Path}}" class='{{if eq $i 0}}active{{end}} hoverable clickable clearfix'>
+						<dl data-cover="{{.Cover.Palm.Path}}" class='{{if eq $i 0}}active{{end}} clickable clearfix'>
+  							<dt><a href='/newhouse/o{{.Id}}.html'><img width=270 height=151 src='{{.Cover.Palm.Path}}' /></a></dt>
   							<dd>{{if not (equals .DeliveryDate "")}}{{.DeliveryDate}}{{else}}{{.SDelivery}}{{end}}</dd>
   							<dt><i class='icon-dot'></i> <a href='/newhouse/o{{.Id}}.html'>{{.Name}}</a></dt>
   						</dl>
@@ -419,15 +452,10 @@
 		</div>
 		<div class='bd f13'>
 			<ul>
-				<li class='pic'>
-					{{ range slice .NewhouseOpens 0 1}}
-	 					<a href='/newhouse/o{{.Id}}.html'><img width=270 height=151 src='{{.Cover.Palm.Path}}' /></a>
-					{{end}}
-				</li>
-				
 				<li>
 					{{ range $i, $o := .NewhouseOpens }}
-						<dl data-cover="{{.Cover.Palm.Path}}" class='{{if eq $i 0}}active{{end}} hoverable clickable clearfix'>
+						<dl data-cover="{{.Cover.Palm.Path}}" class='{{if eq $i 0}}active{{end}} clickable clearfix'>
+ 							<dt><a href='/newhouse/o{{.Id}}.html'><img width=320 height=180 src='{{.Cover.Palm.Path}}' /></a></dt>
  							<dd>{{if not (equals .OpenDate "")}}{{.OpenDate}}{{else}}{{.SOpen}}{{end}}</dd>
  							<dt><i class='icon-dot'></i> <a href='/newhouse/o{{.Id}}.html'>{{.Name}}</a></dt>
  						</dl>
@@ -459,7 +487,7 @@
 			<div class='clearfix'>
 				{{range $i,$v := slice . 0 2}}
 					<dl class='clickable l2 {{if eq (mod $i 2) 1}}last{{end}} '>
-						{{if .Cover}}<dt><img src='{{.Cover.Palm.Path}}' width=170 height=84/></dt>{{end}}
+						{{if .Cover}}<dt><img src='{{.Cover.Palm.Path}}' width=150 height=84/></dt>{{end}}
 						<dd><a href='{{.SURL}}'>{{.STitle}}</a></dd>
 					</dl>
 				{{end}}
@@ -488,7 +516,7 @@
 			<div class='clearfix'>
 				{{range $i,$v := slice . 0 2}}
 					<dl class='clickable l2 {{if eq (mod $i 2) 1}}last{{end}} '>
-						{{if .Cover}}<dt><img src='{{.Cover.Palm.Path}}' width=170 height=84/></dt>{{end}}
+						{{if .Cover}}<dt><img src='{{.Cover.Palm.Path}}' width=150 height=84/></dt>{{end}}
 						<dd><a href='{{.SURL}}'>{{.STitle}}</a></dd>
 					</dl>
 				{{end}}
@@ -517,7 +545,7 @@
 			<div class='clearfix'>
 				{{range $i,$v := slice . 0 2}}
 					<dl class='clickable l2 {{if eq (mod $i 2) 1}}last{{end}} '>
-						{{if .Cover}}<dt><img src='{{.Cover.Palm.Path}}' width=170 height=84/></dt>{{end}}
+						{{if .Cover}}<dt><img src='{{.Cover.Palm.Path}}' width=150 height=84/></dt>{{end}}
 						<dd><a href='{{.SURL}}'>{{.STitle}}</a></dd>
 					</dl>
 				{{end}}
@@ -546,7 +574,7 @@
 			<div class='clearfix'>
 				{{range $i,$v := slice . 0 2}}
 					<dl class='clickable l2 {{if eq (mod $i 2) 1}}last{{end}} '>
-						{{if .Cover}}<dt><img src='{{.Cover.Palm.Path}}' width=170 height=84/></dt>{{end}}
+						{{if .Cover}}<dt><img src='{{.Cover.Palm.Path}}' width=150 height=84/></dt>{{end}}
 						<dd><a href='{{.SURL}}'>{{.STitle}}</a></dd>
 					</dl>
 				{{end}}
@@ -575,7 +603,7 @@
 			<div class='clearfix'>
 				{{range $i,$v := slice . 0 2}}
 					<dl class='clickable l2 {{if eq (mod $i 2) 1}}last{{end}} '>
-						{{if .Cover}}<dt><img src='{{.Cover.Palm.Path}}' width=170 height=84/></dt>{{end}}
+						{{if .Cover}}<dt><img src='{{.Cover.Palm.Path}}' width=150 height=84/></dt>{{end}}
 						<dd><a href='{{.SURL}}'>{{.STitle}}</a></dd>
 					</dl>
 				{{end}}
