--- a/src/main/resources/source/front/components/page/config/config.html
+++ b/src/main/resources/source/front/components/page/config/config.html
@@ -34,11 +34,11 @@
                         </a>
                     </li>
 
-                    <i class=" mui-pull-left iconfont icon-tuangou"></i>
-                    <li class="mui-table-view-cell">
-                        <a class="mui-navigate-right" href="#approve">合作单位人员审批
-                        </a>
-                    </li>
+                    <!--<i class=" mui-pull-left iconfont icon-tuangou"></i>-->
+                    <!--<li class="mui-table-view-cell">-->
+                        <!--<a class="mui-navigate-right" href="#approve">合作单位人员审批-->
+                        <!--</a>-->
+                    <!--</li>-->
 
 
                 </ul>
