--- a/src/main/resources/source/admin/components/page/company/company.html
+++ b/src/main/resources/source/admin/components/page/company/company.html
@@ -32,7 +32,6 @@
                 </div>
             </div>
 
-
             <input type="button" class="button button-small bg-main "  data-target="#user-dialog" style="float: right" data-mask="1" data-width="50%"  v-on="click:addUser" value="新增用户" />
         </div>
         <table class="table table-hover">
@@ -41,8 +40,8 @@
                 <th width="200">合作单位</th>
                 <th width="200">手机号码</th>
                 <th width="100">用户类型</th>
-                <th width="120" >到期时间</th>
-                <th width="120">状态</th>
+                <!--<th width="120" >到期时间</th>-->
+                <!--<th width="120">状态</th>-->
                 <th width="100">操作</th></tr>
             <tr v-repeat="c in users">
                 <td>{{c.name}}</td>
@@ -50,12 +49,12 @@
                 <td>{{c.company}}</td>
                 <td>{{c.mobile}}</td>
                 <td>{{c.booktype==1?"短期用户":"长期用户"}}</td>
-                <td >{{c.effective}}</td>
-                <td ><span class="badge bg-green" v-show="c.zt==2">审核通过</span>
-                     <span class="badge bg-yellow" v-show="c.zt==0">待审核</span>
-                     <span class="badge bg-red" v-show="c.zt==1">审核中</span>
-                     <span class="badge bg-red" v-show="c.zt==3">审核未通过</span>
-                </td>
+                <!--<td >{{c.effective}}</td>-->
+                <!--<td ><span class="badge bg-green" v-show="c.zt==2">审核通过</span>-->
+                     <!--<span class="badge bg-yellow" v-show="c.zt==0">待审核</span>-->
+                     <!--<span class="badge bg-red" v-show="c.zt==1">审核中</span>-->
+                     <!--<span class="badge bg-red" v-show="c.zt==3">审核未通过</span>-->
+                <!--</td>-->
                 <td><a v-on="click:editUser(c)" class="button border-blue button-little" href="javascript:;">修改</a> <a class="button border-yellow button-little" v-on="click:delUser(c._id)" href="javascript:;">删除</a> </td></tr>
         </table>
 
@@ -116,15 +115,15 @@
                                 <div v-show="!validation.mobile" class="input-help  check-error"><ul><li>请填写正确手机号码</li></ul></div>
                             </div>
                         </div>
-                        <div class="form-group">
-                            <div class="label">
-                                到期时间
-                            </div>
-                            <div class="field">
-                                <input type="text" class="input" id="effective" v-model="user.effective" placeholder="请填写到期时间">
-                                <div v-show="!validation2.effective" class="input-help  check-error"><ul><li>必填</li></ul></div>
-                            </div>
-                        </div>
+                        <!--<div class="form-group">-->
+                            <!--<div class="label">-->
+                                <!--到期时间-->
+                            <!--</div>-->
+                            <!--<div class="field">-->
+                                <!--<input type="text" class="input" id="effective" v-model="user.effective" placeholder="请填写到期时间">-->
+                                <!--<div v-show="!validation2.effective" class="input-help  check-error"><ul><li>必填</li></ul></div>-->
+                            <!--</div>-->
+                        <!--</div>-->
                         <div class="form-group">
                             <div class="label">
                                 原因
